--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cli-kintone",
-  "version": "1.0.0",
-  "description": "Import and export tool",
+  "version": "0.1.0",
+  "description": "cli-kintone is a command line utility for exporting and importing kintone App data.",
   "main": "dist/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
