--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,6 @@ jobs: # a basic unit of work in a run
      # see circleci.com/docs/2.0/circleci-images/ for
      # the list of pre-built CircleCI images on dockerhub.
        - image: circleci/node:chakracore-10.13
-    working_directory: /build
     steps:
       - checkout
       - run:
@@ -21,7 +20,8 @@ jobs: # a basic unit of work in a run
           command: |
             npm run package:all
       - store_artifacts:
-          path: /build
+          path: build/mac/cli-kintone
+          destination: mac
 workflows:
   version: 2
   build_and_deploy:
