--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,6 @@ jobs: # a basic unit of work in a run
     working_directory: ~/build_tmp
     steps:
       - checkout
-      - run: mkdir -p workspace
       # Download and cache dependencies
       - restore_cache:
           keys:
@@ -46,21 +45,21 @@ jobs: # a basic unit of work in a run
       - persist_to_workspace:
           # Must be an absolute path, or relative path from working_directory. This is a directory on the container which is 
           # taken to be the root directory of the workspace.
-          root: workspace
+          root: build_tmp
           # Must be relative path from root
           paths:
-            - build
+            - build/*
   publish-github-release:
     docker:
       - image: cibuilds/github:0.10
     steps:
       - attach_workspace:
-          at: /build_tmp/workspace/build
+          at: /build_tmp/build
       - run:
           name: "Publish Release on GitHub"
           command: |
             VERSION=0.1.0
-            ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} -delete ${VERSION} build_tmp/workspace/build/
+            ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} -delete ${VERSION} build_tmp/build/
 workflows:
   version: 2
   build_and_deploy:
