--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,6 +46,12 @@ jobs: # a basic unit of work in a run
           # Must be an absolute path, or relative path from working_directory. This is a directory on the container which is 
           # taken to be the root directory of the workspace.
           root: build
+          # Must be relative path from root
+          paths:
+            - mac/cli-kintone
+            - win32/cli-kintone.exe
+            - win64/cli-kintone.exe
+            - linux/cli-kintone
   publish-github-release:
     docker:
       - image: cibuilds/github:0.10
