--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,7 @@
 version: 2
 jobs: # a basic unit of work in a run
   build: # runs not using `Workflows` must have a `build` job as entry poin
+    executor: build-executor
     docker: # Specifies the primary container image,
      # see circleci.com/docs/2.0/circleci-images/ for
      # the list of pre-built CircleCI images on dockerhub.
@@ -53,6 +54,7 @@ jobs: # a basic unit of work in a run
             - win64/cli-kintone.exe
             - linux/cli-kintone
   publish-github-release:
+    executor: build-executor
     docker:
       - image: cibuilds/github:0.10
     steps:
