--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,7 @@ jobs: # a basic unit of work in a run
           echo "ARCHIVE_PATH=$ARCHIVE_PATH"
           echo "export ARCHIVE_PATH=$ARCHIVE_PATH" >> $BASH_ENV
       
-      - run: tar -czvf $ARCHIVE_PATH -C /build_tmp/build .
+      - run: tar -czvf $ARCHIVE_PATH -C "/build_tmp/build" .
       - store_artifacts:
           path: $ARCHIVE_PATH
       - persist_to_workspace:
