--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,8 @@ jobs: # a basic unit of work in a run
       
       - run: tar -czvf "$ARCHIVE_PATH" -C "build" .
       - store_artifacts:
-          path: $ARCHIVE_PATH
+          path: build/
+          destination: build/*
       - persist_to_workspace:
           # Must be an absolute path, or relative path from working_directory. This is a directory on the container which is 
           # taken to be the root directory of the workspace.
