--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,7 @@ jobs: # a basic unit of work in a run
       - run: tar -czvf "$ARCHIVE_PATH" -C "build" .
       - store_artifacts:
           path: build/
-          destination: build/*
+          destination: "build/$ARCHIVE_NAME"
       - persist_to_workspace:
           # Must be an absolute path, or relative path from working_directory. This is a directory on the container which is 
           # taken to be the root directory of the workspace.
