--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,9 @@ jobs: # a basic unit of work in a run
           echo "ARCHIVE_PATH=$ARCHIVE_PATH"
           echo "export ARCHIVE_PATH=$ARCHIVE_PATH" >> $BASH_ENV
       
-      - run: tar -czvf $ARCHIVE_PATH -C build/ .
+      - run: |
+          tar -v
+          tar -czvf $ARCHIVE_PATH -C build/ .
       - store_artifacts:
           path: build/
           destination: build/$ARCHIVE_NAME
