--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,10 +48,10 @@ jobs: # a basic unit of work in a run
           echo "export ARCHIVE_PATH=$ARCHIVE_PATH" >> $BASH_ENV
       
       - run: |
-          tar -czvf "$ARCHIVE_PATH" -C build/ .
+          tar -czvf "$ARCHIVE_NAME" -C build/ .
       - store_artifacts:
-          path: binary/
-          destination: build/*
+          path: /
+          destination: "build/$ARCHIVE_NAME"
       - persist_to_workspace:
           # Must be an absolute path, or relative path from working_directory. This is a directory on the container which is 
           # taken to be the root directory of the workspace.
