--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,14 +43,14 @@ jobs: # a basic unit of work in a run
           echo "ARCHIVE_NAME=$ARCHIVE_NAME"
           echo "export ARCHIVE_NAME=$ARCHIVE_NAME" >> $BASH_ENV
       - run: |
-          ARCHIVE_PATH="binary/$ARCHIVE_NAME"
+          ARCHIVE_PATH="build/$ARCHIVE_NAME"
           echo "ARCHIVE_PATH=$ARCHIVE_PATH"
           echo "export ARCHIVE_PATH=$ARCHIVE_PATH" >> $BASH_ENV
       
       - run: |
           tar -czvf "$ARCHIVE_NAME" -C build/ .
       - store_artifacts:
-          path: /
+          path: build/
           destination: "build/$ARCHIVE_NAME"
       - persist_to_workspace:
           # Must be an absolute path, or relative path from working_directory. This is a directory on the container which is 
