--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,8 +48,7 @@ jobs: # a basic unit of work in a run
           echo "export ARCHIVE_PATH=$ARCHIVE_PATH" >> $BASH_ENV
       
       - run: |
-          tar -czvf "$ARCHIVE_NAME" -C build/ .
-          ls
+          tar -czvf ${ARCHIVE_NAME}" -C build/ .
       - store_artifacts:
           path: build/
       - persist_to_workspace:
