--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,13 +42,12 @@ jobs: # a basic unit of work in a run
           ARCHIVE_NAME="$BINARY-$VERSION-$CIRCLE_JOB.tar.gz"
           echo "ARCHIVE_NAME=$ARCHIVE_NAME"
           echo "export ARCHIVE_NAME=$ARCHIVE_NAME" >> $BASH_ENV
-      - run: |
           ARCHIVE_PATH="build/$ARCHIVE_NAME"
           echo "ARCHIVE_PATH=$ARCHIVE_PATH"
           echo "export ARCHIVE_PATH=$ARCHIVE_PATH" >> $BASH_ENV
-      
+          tar -czvf ${ARCHIVE_NAME} -C build/
       - run: |
-          tar -czvf ${ARCHIVE_NAME} -C build/ .
+          ls -la
       - store_artifacts:
           path: build/
       - persist_to_workspace:
