--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,7 @@ jobs: # a basic unit of work in a run
           echo "ARCHIVE_PATH=$ARCHIVE_PATH"
           echo "export ARCHIVE_PATH=$ARCHIVE_PATH" >> $BASH_ENV
       - run: |
-          tar -czvf "${ARCHIVE_NAME}" -C build/
+          tar -czvf "cli-kintone.zip" -C build/
           ls -la
       - store_artifacts:
           path: build/
@@ -56,7 +56,7 @@ jobs: # a basic unit of work in a run
           root: build
           # Must be relative path from root
           paths:
-            - build/ARCHIVE_NAME
+            - cli-kintone.zip
   publish-github-release:
     docker:
       - image: cibuilds/github:0.10
