--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,9 @@ jobs: # a basic unit of work in a run
           echo "ARCHIVE_PATH=$ARCHIVE_PATH"
           echo "export ARCHIVE_PATH=$ARCHIVE_PATH" >> $BASH_ENV
       - run: |
-          tar -czvf "build/cli-kintone.zip" -C build/ .
+          tar -czvf "cli-kintone.zip" -C build/ .
+      - run: |
+          ls -la
       - store_artifacts:
           path: build/cli-kintone.zip
       - persist_to_workspace:
