--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,7 +55,7 @@ jobs: # a basic unit of work in a run
       - persist_to_workspace:
           # Must be an absolute path, or relative path from working_directory. This is a directory on the container which is 
           # taken to be the root directory of the workspace.
-          root: binary
+          root: /build_tmp
           # Must be relative path from root
           paths:
             - cli-kintone.zip
