--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,7 +59,7 @@ jobs: # a basic unit of work in a run
           root: binary
           # Must be relative path from root
           paths:
-            - cli-kintone.zip
+            - binary/cli-kintone.zip
 
   publish-github-release:
     docker:
@@ -72,7 +72,7 @@ jobs: # a basic unit of work in a run
           command: |
             ls -la
             VERSION=0.1.0
-            ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} -delete ${VERSION} build_tmp/binary/cli-kintone.zip
+            ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} -delete ${VERSION} /build_tmp/binary/cli-kintone.zip
 workflows:
   version: 2
   build_and_deploy:
