--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,6 +78,7 @@ jobs: # a basic unit of work in a run
       - run:
           name: "Publish Release on GitHub"
           command: |
+            echo "export GITHUB_API=$GITHUB_API" >> $BASH_ENV
             ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} -delete ${CIRCLE_TAG} /build_tmp/binary/
 workflows:
   version: 2
